--- a/review.html
+++ b/review.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1200, initial-scale=1,0">
     <title>Air Asia | Review</title>
@@ -15,15 +15,15 @@
                 <header class="header">
                     <div class="header__col">
                         <div class="logo">
-                            <a href="/index.html" class="logo__link">
-                                <img src="/img/logo.png" alt="air asia logo" class="logo__img">
+                            <a href="./index.html" class="logo__link">
+                                <img src="./img/logo.png" alt="air asia logo" class="logo__img">
                             </a>
                         </div>
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li class="menu__item"><a href="/index.html" class="menu__link">Главная</a></li>
-                                <li class="menu__item"><a href="/service.html" class="menu__link">Услуги</a></li>
-                                <li class="menu__item  menu__item--active"><a href="/review.html"
+                                <li class="menu__item"><a href="./index.html" class="menu__link">Главная</a></li>
+                                <li class="menu__item"><a href="./service.html" class="menu__link">Услуги</a></li>
+                                <li class="menu__item  menu__item--active"><a href="./review.html"
                                         class="menu__link">Отзывы</a></li>
                             </ul>
                         </nav>
@@ -47,10 +47,10 @@
                 <nav class="breadcrumbs">
                     <ul class="breadcrumbs__list">
                         <li class="breadcrumbs__item">
-                            <a href="/index.html" class="breadcrumbs__link">Главная</a>
+                            <a href="./index.html" class="breadcrumbs__link">Главная</a>
                         </li>
                         <li class="breadcrumbs__item breadcrumbs__item--active">
-                            <a href="/review.html" class="breadcrumbs__link">Отзывы</a>
+                            <a href="./review.html" class="breadcrumbs__link">Отзывы</a>
                         </li>
                     </ul>
                 </nav>
@@ -63,7 +63,7 @@
                         <div class="review__header">
                             <div class="review__photo">
                                 <div class="avatar">
-                                    <img src="/img/content/reviews/ginger.jpg" alt="user" class="avatar__pic">
+                                    <img src="./img/content/reviews/ginger.jpg" alt="user" class="avatar__pic">
                                 </div>
                             </div>
                             <div class="review__userdata">
@@ -88,7 +88,7 @@
                         <div class="review__header">
                             <div class="review__photo">
                                 <div class="avatar">
-                                    <img src="/img/content/reviews/liza.jpg" alt="user" class="avatar__pic">
+                                    <img src="./img/content/reviews/liza.jpg" alt="user" class="avatar__pic">
                                 </div>
                             </div>
                             <div class="review__userdata">
@@ -114,7 +114,7 @@
                         <div class="review__header">
                             <div class="review__photo">
                                 <div class="avatar">
-                                    <img src="/img/content/reviews/girl.jpg" alt="user" class="avatar__pic">
+                                    <img src="./img/content/reviews/girl.jpg" alt="user" class="avatar__pic">
                                 </div>
                             </div>
                             <div class="review__userdata">
@@ -143,7 +143,7 @@
                         <div class="review__header">
                             <div class="review__photo">
                                 <div class="avatar">
-                                    <img src="/img/content/reviews/guy.jpg" alt="user" class="avatar__pic">
+                                    <img src="./img/content/reviews/guy.jpg" alt="user" class="avatar__pic">
                                 </div>
                             </div>
                             <div class="review__userdata">
@@ -185,7 +185,7 @@
                 <div class="separator__title">Подберем тур по вашим пожеланиям
                 </div>
                 <div class="separator__pic-block">
-                    <img src="/img/decor/couple.png" alt="" class="separator__pic">
+                    <img src="./img/decor/couple.png" alt="" class="separator__pic">
                 </div>
             </div>
         </section>
@@ -261,14 +261,14 @@
                     <div class="footer__col">
                         <div class="logo">
                             <a href="/" class="logo">
-                                <img src="/img/logo.png" alt="air asia logo" class="logo__img">
+                                <img src="./img/logo.png" alt="air asia logo" class="logo__img">
                             </a>
                         </div>
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li class="menu__item"><a href="/index.html" class="menu__link">Главная</a></li>
-                                <li class="menu__item"><a href="/service.html" class="menu__link">Услуги</a></li>
-                                <li class="menu__item"><a href="/review.html" class="menu__link">Отзывы</a></li>
+                                <li class="menu__item"><a href="./index.html" class="menu__link">Главная</a></li>
+                                <li class="menu__item"><a href="./service.html" class="menu__link">Услуги</a></li>
+                                <li class="menu__item"><a href="./review.html" class="menu__link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
