--- a/service.html
+++ b/service.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1200, initial-scale=1,0">
     <title>Air Asia | Service</title>
@@ -15,16 +15,16 @@
                 <header class="header">
                     <div class="header__col">
                         <div class="logo">
-                            <a href="/index.html" class="logo__link">
-                                <img src="/img/logo.png" alt="air asia logo" class="logo__img">
+                            <a href="./index.html" class="logo__link">
+                                <img src="./img/logo.png" alt="air asia logo" class="logo__img">
                             </a>
                         </div>
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li class="menu__item"><a href="/index.html" class="menu__link">Главная</a></li>
-                                <li class="menu__item menu__item--active"><a href="/service.html"
+                                <li class="menu__item"><a href="./index.html" class="menu__link">Главная</a></li>
+                                <li class="menu__item menu__item--active"><a href="./service.html"
                                         class="menu__link">Услуги</a></li>
-                                <li class="menu__item"><a href="/review.html" class="menu__link">Отзывы</a></li>
+                                <li class="menu__item"><a href="./review.html" class="menu__link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -47,10 +47,10 @@
                 <nav class="breadcrumbs">
                     <ul class="breadcrumbs__list">
                         <li class="breadcrumbs__item">
-                            <a href="/index.html" class="breadcrumbs__link">Главная</a>
+                            <a href="./index.html" class="breadcrumbs__link">Главная</a>
                         </li>
                         <li class="breadcrumbs__item breadcrumbs__item--active">
-                            <a href="/service.html" class="breadcrumbs__link">Услуги</a>
+                            <a href="./service.html" class="breadcrumbs__link">Услуги</a>
                         </li>
                     </ul>
                 </nav>
@@ -62,7 +62,7 @@
                     <li class="services__item">
                         <a href="" class="service">
                             <div class="service__img">
-                                <img src="/img/content/service/waterfall.jpg" class="service__img-elem" alt="waterfall">
+                                <img src="./img/content/service/waterfall.jpg" class="service__img-elem" alt="waterfall">
                             </div>
                             <div class="service__content">
                                 <h2 class="service__title">Водопад Янг-бей</h2>
@@ -80,7 +80,7 @@
                     <li class="services__item">
                         <a href="#" class="service">
                             <div class="service__img">
-                                <img src="/img/content/service/monkeys.jpg" class="service__img-elem" alt="monkeys">
+                                <img src="./img/content/service/monkeys.jpg" class="service__img-elem" alt="monkeys">
                             </div>
                             <div class="service__content">
                                 <h2 class="service__title">Остров обезьян</h2>
@@ -116,42 +116,42 @@
                 <ul class="partners">
                     <li class="partners__item">
                         <a href="#" class="partners__link">
-                            <img src="/img/icons/partners/pobeda.png" alt="pobeda" class="partners__logo">
+                            <img src="./img/icons/partners/pobeda.png" alt="pobeda" class="partners__logo">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="#" class="partners__link">
-                            <img src="/img/icons/partners/s7.png" alt="pobeda" class="partners__logo">
+                            <img src="./img/icons/partners/s7.png" alt="pobeda" class="partners__logo">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="#" class="partners__link">
-                            <img src="/img/icons/partners/lets-fly.png" alt="pobeda" class="partners__logo">
+                            <img src="./img/icons/partners/lets-fly.png" alt="pobeda" class="partners__logo">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="#" class="partners__link">
-                            <img src="/img/icons/partners/lufthansa.png" alt="pobeda" class="partners__logo">
+                            <img src="./img/icons/partners/lufthansa.png" alt="pobeda" class="partners__logo">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="#" class="partners__link">
-                            <img src="/img/icons/partners/airbaltic.png" alt="pobeda" class="partners__logo">
+                            <img src="./img/icons/partners/airbaltic.png" alt="pobeda" class="partners__logo">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="#" class="partners__link">
-                            <img src="/img/icons/partners/pegasus.png" alt="pobeda" class="partners__logo">
+                            <img src="./img/icons/partners/pegasus.png" alt="pobeda" class="partners__logo">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="#" class="partners__link">
-                            <img src="/img/icons/partners/ural.png" alt="pobeda" class="partners__logo">
+                            <img src="./img/icons/partners/ural.png" alt="pobeda" class="partners__logo">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="#" class="partners__link">
-                            <img src="/img/icons/partners/pegas.png" alt="pobeda">
+                            <img src="./img/icons/partners/pegas.png" alt="pobeda">
                         </a>
                     </li>
                 </ul>
@@ -163,14 +163,14 @@
                     <div class="footer__col">
                         <div class="logo">
                             <a href="/" class="logo">
-                                <img src="/img/logo.png" alt="air asia logo" class="logo__img">
+                                <img src="./img/logo.png" alt="air asia logo" class="logo__img">
                             </a>
                         </div>
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li class="menu__item"><a href="/index.html" class="menu__link">Главная</a></li>
-                                <li class="menu__item"><a href="/service.html" class="menu__link">Услуги</a></li>
-                                <li class="menu__item"><a href="/review.html" class="menu__link">Отзывы</a></li>
+                                <li class="menu__item"><a href="./index.html" class="menu__link">Главная</a></li>
+                                <li class="menu__item"><a href="./service.html" class="menu__link">Услуги</a></li>
+                                <li class="menu__item"><a href="./review.html" class="menu__link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
