--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Air Asia | Welcome</title>
 </head>
 
@@ -13,10 +13,10 @@
         <div class="section-welcome">
             <div class="welcome bounceIn ">                
                     <div class="welcome__logo">
-                        <img src="/img/logo-wide.png" alt="logo-big" class="welcome__img">
+                        <img src="./img/logo-wide.png" alt="logo-big" class="welcome__img">
                     </div>
                     <h1 class="welcome__title">Открой для себя Азию</h1>                
-                <a href="index.html" class="btn btn--welcome">Войти</a>
+                <a href="./index.html" class="btn btn--welcome">Войти</a>
             </div>
         </div>
     </div>
