--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
                 <header class="header">
                     <div class="header__col">
                         <div class="logo">
-                            <a href="/index.html" class="logo__link">
-                                <img src="/img/logo.png" alt="air asia logo" class="logo__img">
+                            <a href="./index.html" class="logo__link">
+                                <img src="./img/logo.png" alt="air asia logo" class="logo__img">
                             </a>
                         </div>
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li class="menu__item menu__item--active"><a href="/index.html"
+                                <li class="menu__item menu__item--active"><a href="./index.html"
                                         class="menu__link">Главная</a></li>
-                                <li class="menu__item"><a href="/service.html" class="menu__link">Услуги</a></li>
-                                <li class="menu__item"><a href="/review.html" class="menu__link">Отзывы</a></li>
+                                <li class="menu__item"><a href="./service.html" class="menu__link">Услуги</a></li>
+                                <li class="menu__item"><a href="./review.html" class="menu__link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -58,15 +58,15 @@
                 <ul class="offers">
                     <li class="offers__item offer offer-item">
                         <div class="offer__header">
-                            <img src="/img/content/offers/river.jpg" alt="Thai" class="offer__header-img">
+                            <img src="./img/content/offers/river.jpg" alt="Thai" class="offer__header-img">
                         </div>
                         <div class="offer__content">
                             <h3 class="offer__title">Тайланд</h3>
                             <div class="offer__desc">
                                 <div class="terms">
-                                    <img src="/img/icons/offers/calendar.png" class="terms__img" alt="7-12 ночей">
+                                    <img src="./img/icons/offers/calendar.png" class="terms__img" alt="7-12 ночей">
                                     <div class="terms__description">7- 12 ночей</div>
-                                    <img src="/img/icons/offers/meal.png" class="terms__img" alt="завтраки">
+                                    <img src="./img/icons/offers/meal.png" class="terms__img" alt="завтраки">
                                     <div class="terms__description">Завтраки</div>
                                 </div>
                             </div>
@@ -79,15 +79,15 @@
                     </li>
                     <li class="offers__item offer offer-item">
                         <div class="offer__header">
-                            <img src="/img/content/offers/pool.jpg" alt="Bali" class="offer__header-img">
+                            <img src="./img/content/offers/pool.jpg" alt="Bali" class="offer__header-img">
                         </div>
                         <div class="offer__content">
                             <h3 class="offer__title">Бали</h3>
                             <div class="offer__desc">
                                 <div class="terms">
-                                    <img src="/img/icons/offers/calendar.png" class="terms__img" alt="7-12 ночей">
+                                    <img src="./img/icons/offers/calendar.png" class="terms__img" alt="7-12 ночей">
                                     <div class="terms__description">7- 12 ночей</div>
-                                    <img src="/img/icons/offers/meal.png" class="terms__img" alt="завтраки">
+                                    <img src="./img/icons/offers/meal.png" class="terms__img" alt="завтраки">
                                     <div class="terms__description">Завтраки</div>
                                 </div>
                             </div>
@@ -100,15 +100,15 @@
                     </li>
                     <li class="offers__item offer offer-item">
                         <div class="offer__header">
-                            <img src="/img/content/offers/ocean.jpg" alt="Indonesia" class="offer__header-img">
+                            <img src="./img/content/offers/ocean.jpg" alt="Indonesia" class="offer__header-img">
                         </div>
                         <div class="offer__content">
                             <h3 class="offer__title">Индонезия</h3>
                             <div class="offer__desc">
                                 <div class="terms">
-                                    <img src="/img/icons/offers/calendar.png" class="terms__img" alt="7-12 ночей">
+                                    <img src="./img/icons/offers/calendar.png" class="terms__img" alt="7-12 ночей">
                                     <div class="terms__description">7- 12 ночей</div>
-                                    <img src="/img/icons/offers/meal.png" class="terms__img" alt="завтраки">
+                                    <img src="./img/icons/offers/meal.png" class="terms__img" alt="завтраки">
                                     <div class="terms__description">Завтраки</div>
                                 </div>
                             </div>
@@ -128,7 +128,7 @@
                 <h2 class="section__title">Новости и акции</h2>
                 <ul class="news">
                     <li class="news__item single-news">
-                        <img src="/img/content/news/plain.jpg" alt="plane" class="single-news__cover">
+                        <img src="./img/content/news/plain.jpg" alt="plane" class="single-news__cover">
                         <div class="single-news__text-content">
                             <div class="single-news__date">декабрь 2019</div>
                             <div class="single-news__title">Дешевые путевки на Новый Год!</div>
@@ -136,7 +136,7 @@
                         </div>
                     </li>
                     <li class="news__item single-news">
-                        <img src="/img/content/news/surfer.jpg" alt="surfer" class="single-news__cover">
+                        <img src="./img/content/news/surfer.jpg" alt="surfer" class="single-news__cover">
                         <div class="single-news__text-content">
                             <div class="single-news__date">декабрь 2019</div>
                             <div class="single-news__title">Акция для серфенгистов!</div>
@@ -181,14 +181,14 @@
                     <div class="footer__col">
                         <div class="logo">
                             <a href="/" class="logo">
-                                <img src="/img/logo.png" alt="air asia logo" class="logo__img">
+                                <img src="./img/logo.png" alt="air asia logo" class="logo__img">
                             </a>
                         </div>
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li class="menu__item"><a href="/index.html" class="menu__link">Главная</a></li>
-                                <li class="menu__item"><a href="/service.html" class="menu__link">Услуги</a></li>
-                                <li class="menu__item"><a href="/review.html" class="menu__link">Отзывы</a></li>
+                                <li class="menu__item"><a href="./index.html" class="menu__link">Главная</a></li>
+                                <li class="menu__item"><a href="./service.html" class="menu__link">Услуги</a></li>
+                                <li class="menu__item"><a href="./review.html" class="menu__link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
